# deep-conc-mind

./: .gitignore  db.sqlite3  iter (1).ipynb  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  urls.py  views.py
accounts/templates/accounts/: signin.html  signup.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_category.py  0003_category_alter_blog_category.py
blog/templates/blog/: blog_detail.html  blogs.html
deepconcmind/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mind/: admin.py  models.py  urls.py  views.py
mind/migrations/: 0001_initial.py  0002_secrets.py  0003_rename_secrets_secret.py  0004_rename_message_chat_human_and_more.py
mind/templates/mind/: mind.html
profiles/: admin.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_profile_bio.py
profiles/templates/profiles/: profile.html  profiles.html
templates/: base.html  dashbord.html  how_to_dashbord.html  how_to_mind_ai.html  mind.html
