[tool.poetry]
name = "deepconcmind"
version = "0.1.0"
description = ""
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-allauth = "^0.57.0"
langchain = "^0.0.314"
openai = "^0.28.1"
pillow = "^10.0.1"
django-markdownify = "^0.9.3"
markdown = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
